objects/Obj_Name_With_Button_Details__c.object
<CustomObject>
    <fields>
        <fullName>Is_eSignGenie_Button_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is eSignGenie Button Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_eSign_Genie_Fields_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is eSign Genie Fields Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obj_Label__c</fullName>
        <label>Obj Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obj_Name__c</fullName>
        <externalId>true</externalId>
        <label>Obj Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Obj Name With Button Details</label>
    <nameField>
        <label>Obj Name With Button Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj Name With Button Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>